fix(area): fix area footnote visibility bug

--- a/src/feature/area/widget/AreaWidget/AreaWidget.module.scss
+++ b/src/feature/area/widget/AreaWidget/AreaWidget.module.scss
@@ -52,14 +52,5 @@
             top: 100%;
             transform: translate(-50%, -1%);
         }
-
-        .Text {}
-
-        .Graphic {
-            width: 100%;
-            height: auto;
-        }
     }
-
-    
 }
